package Comportamiento.Visitor;

public interface IEmpleado {
    //El elemento(La estructura)

    String aceptar(IVisitor visitor);
}
